--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="flutter_to_native"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.nearby.messages.API_KEY"
+            android:value="APIKEY_HERE" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
